src/test/deca/context/invalid/personalTests/TypeIncompatible.deca
// Erreur de compilation : types incompatibles.

{
    string text = "Hello";
    int result = text + 5; // Erreur : types incompatibles.
}